--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 *.class
 run.bat
 
-# Nesse arquivos tem a exclusão de arquivos não importantes para o projeto
+# Nesse arquivo tem a exclusão de arquivos não importantes para o projeto
